kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${PREFIX}-${NAME}-svc
spec:
  selector:
    app: ${PREFIX}-${NAME}-pod
  ports:
    - protocol: TCP
      port: ${PORT}
      targetPort: ${TARGET_PORT}
