kubernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${PREFIX}-${NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: "${INGRESS_CLASS}"
    cert-manager.io/cluster-issuer: "${ISSUER}"
spec:
  rules:
    - host: "${DNS_NAME}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${PREFIX}-${NAME}-svc
                port:
                  number: ${SERVICE_PORT}
  tls:
    - hosts: ${TLS_HOSTS}
      secretName: ${TLS_SECRET_NAME}
